appId: com.onebrain.dabbler
---
- launchApp:
    clearState: false
- assertVisible: "Home"
- tapOn: "Profile"
- tapOn: "Change Password"
- inputText: "Test@12345"
- tapOn:
    text: "New Password"
- inputText: "NewTest@12345"
- tapOn:
    text: "Confirm"
- assertVisible:
    text: "updated"
