appId: com.onebrain.dabbler
---
- launchApp:
    clearState: true
- tapOn: "Mobile"
- inputText: "+971501234567"
- tapOn:
    text: "Continue"
- assertVisible: "OTP"
- inputText: "000000"
- tapOn:
    text: "Verify"
- assertVisible:
    text: "Invalid"
